2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	Bug 567761 – Spellfixes in GTK+ documentation

	* gdk/x11/gdkselection-x11.c:
	* gtk/gtktestutils.c: Fix typos in the docs.

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	Bug 567021 – gtkimage accessors docs

	* gtk/gtkimage.c: Improve docs by mentioning allowed NULL values.
	Patch by Christian Persch

2009-01-23  Matthias Clasen  <mclasen@redhat.com>

	Bug 566535 – gtk_widget_get_snapshot does not work if double buffered 
	is disabled

	* gtk/gtkwidget.c (gtk_widget_get_snapshot): Use a different approach
	to snapshotting that is in line with what is done in the client-side
	windows branch, and that works for widgets regardless if they are
	double-buffered or not. Patch by Alex Larsson.

	* gdk/gdkwindow.c (_gdk_window_calculate_full_clip_region): Clip
	to the parent.

2009-01-22  Federico Mena Quintero  <federico@novell.com>

	* gtk/gtkfilechooserentry.c (autocomplete): Relax the assertion;
	just do nothing if the folder is not loaded or if the cursor position
	is not at the end of the text.  A very slow-to-load folder can get
	us into the latter state if the user starts typing first.

2008-01-22  Matthias Clasen  <mnclasen@redhat.com>

	* gtk/gtkaction.c: Revert the last change, since it breaks
	epiphany.

2009-01-22  Federico Mena Quintero  <federico@novell.com>

	Fix the computation of "complete but unique" in
	GtkFileChooserEntry.  Fix the case where "/" was not appended to a
	unique directory name during explicit Tab completion.

	* gtk/gtkfilechooserentry.c (maybe_append_separator_to_file):
	Return whether anything was appended as well as the new string
	itself.
	(find_common_prefix): Oops, only turn on
	is_complete_not_unique_ret if we had a unique match!
	(append_common_prefix): If we appended a directory separator, we
	*did* expand the common prefix, so we are not in the "nothing
	inserted" case.

2009-01-22  Federico Mena Quintero  <federico@novell.com>
